--- a/package.json
+++ b/package.json
@@ -12,6 +12,9 @@
   "dependencies": {
     "@prisma/client": "^6.19.1",
     "@sentry/nextjs": "^10.32.1",
+    "bcryptjs": "^3.0.3",
+    "cookie": "^1.1.1",
+    "jose": "^6.1.3",
     "next": "16.1.1",
     "prisma": "^6.19.1",
     "react": "19.2.3",
